fix alignment for content

--- a/wordcamp-base/style.css
+++ b/wordcamp-base/style.css
@@ -1374,10 +1374,12 @@ code {
 
 .entry-content {
 	margin-bottom: 0 !important;
+	text-align: justify;
 }
 
 .entry-content, .entry-content p {
 	font-size: 14px !important;
+    text-align: justify;
 }
 
 .entry-meta, .page-title {
